[package]
name = "nitf-rs"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate to read NITF files."
homepage = "https://github.com/holmesv3/nitf-rs"
readme = "README-crates.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "^1.0"
memmap2 = "0.5.10"
num-complex = "0.4.3"
ndarray = {version = "^0.15"}
serde = {version = "^1.0", features = ["derive"], optional = true}
quick-xml = {version = "^0.28", features = ["serialize"], optional = true}

[features]
sicd = ["dep:serde", "dep:quick-xml"]



