[package]
name = "nitf-rs"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Minimal NITF interface."
homepage = "https://github.com/holmesv3/nitf-rs"
readme = "README-crates.md"

[dependencies]
thiserror = "1.0"
memmap2 = "0.5.10"
log = "0.4"

[dev-dependencies]
clap = { version = "4.5.3", features = ["derive"] }
simple_logger = "4.3"